# observability-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py  schemas.py
api/app/routers/: events.py  health.py  integrations.py  stats.py
api/app/services/: elasticsearch.py  rabbitmq.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Events.tsx  Integrations.tsx
simulator/: Dockerfile  pyproject.toml  simulator.py
worker/: Dockerfile  pyproject.toml  worker.py
