[project]
name = "observ-simulator"
version = "0.1.0"
description = "Simulador de sistema legado publicando eventos no RabbitMQ"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "aio-pika>=9.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["simulator"]
